# scribble

./: LICENSE  README.md  pyproject.toml
src/scribble/: prototype.py
